@@ -343,7 +343,7 @@ public function get_error_msg ()
  */
 final protected function _exec ($cmd)
 {
-	if (DEBUG) { echo '<pre style="overflow: auto">' . $cmd . "</pre>\n"; }
+	if (SR_DEBUG) { echo '<pre style="overflow: auto">' . $cmd . "</pre>\n"; }
 
 	$cmd_output = array();
 
@@ -600,7 +600,7 @@ final public function render()
 	if (!$this->conversion_step1($input_file, $intermediate_image) ||
 	    (filesize ($intermediate_image)) === 0)
 	{
-		if (! DEBUG) {
+		if (! SR_DEBUG) {
 			unlink ($input_file);
 			@rmdir ($temp_working_dir);
 		}
@@ -616,7 +616,7 @@ final public function render()
 	}
 
 	// Cleanup
-	if (! DEBUG) {
+	if (! SR_DEBUG) {
 		unlink ($intermediate_image);
 		unlink ($input_file);
 		@rmdir ($temp_working_dir);
